ランダム名前生成ツールの追加